<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.9</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

    <groupId>com.cinx</groupId>
    <artifactId>cinx-parent</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>
    <name>cinx-parent</name>
    <description>Parent POM for Cinx Microservices</description>

    <modules>
        <module>eureka</module>
        <module>gateway</module>
        <module>auth</module>
        <module>common</module>
        <module>user</module>
        <module>course</module>
        <module>cart</module>
        <module>discovery</module>
        <module>learning</module>
        <module>enrollment</module>
        <module>payment</module>
        <module>social</module>
        <module>notification</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <spring.cloud.version>2025.0.1</spring.cloud.version>
        <org.springdoc.version>2.8.5</org.springdoc.version>
        <com.google.firebase.version>9.4.1</com.google.firebase.version>
        <org.mapstruct.version>1.6.3</org.mapstruct.version>
        <org.lombok.version>1.18.36</org.lombok.version>
        <org.lombok-mapstruct-binding.version>0.2.0</org.lombok-mapstruct-binding.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${org.springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
                <version>${org.springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.firebase</groupId>
                <artifactId>firebase-admin</artifactId>
                <version>${com.google.firebase.version}</version>
            </dependency>

            <dependency>  
                <groupId>org.mapstruct</groupId>  
                <artifactId>mapstruct</artifactId>  
                <version>${org.mapstruct.version}</version>  
            </dependency>

            <dependency>  
                <groupId>org.projectlombok</groupId>  
                <artifactId>lombok</artifactId>  
                <version>${org.lombok.version}</version>  
                <optional>true</optional>  
                <scope>provided</scope>  
            </dependency>

            <dependency>  
                <groupId>org.projectlombok</groupId>  
                <artifactId>lombok-mapstruct-binding</artifactId>  
                <version>${org.lombok-mapstruct-binding.version}</version>  
            </dependency> 
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>  
                <plugin>  
                    <groupId>org.apache.maven.plugins</groupId>  
                    <artifactId>maven-compiler-plugin</artifactId>  
                    <configuration>  
                        <source>${java.version}</source>  
                        <target>${java.version}</target>  
                        <annotationProcessorPaths>  
                            <path>  
                                <groupId>org.projectlombok</groupId>  
                                <artifactId>lombok</artifactId>  
                                <version>${org.lombok.version}</version>  
                            </path>  
    
                            <path>  
                                <groupId>org.mapstruct</groupId>  
                                <artifactId>mapstruct-processor</artifactId>  
                                <version>${org.mapstruct.version}</version>  
                            </path>  
                            <path>  
                                <groupId>org.projectlombok</groupId>  
                                <artifactId>lombok-mapstruct-binding</artifactId>  
                                <version>${org.lombok-mapstruct-binding.version}</version>  
                            </path>  
                        </annotationProcessorPaths>  
                    </configuration>  
                </plugin>  
                <plugin>  
                    <groupId>org.springframework.boot</groupId>  
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>  
            </plugins>
        </pluginManagement>
	</build>
</project>
